--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "node_modules/.bin/babel index.js > doc.js",
+    "build": "node doc.js",
+    "watch": "npm run compile && npm run build"
   },
   "author": "",
   "license": "ISC",
